--- a/wiki/Johan.wikitext
+++ b/wiki/Johan.wikitext
@@ -1,2 +1,4 @@
-Anti-sematic word meaning i hate all Jews and will kill every one i see 
-Pronounced Yo-han
+===Proper noun===
+'''Johan'''
+
+# male given name, [[John]]
