--- a/wiki/john.wikitext
+++ b/wiki/john.wikitext
@@ -1,2 +1,5 @@
-one word....soap...ewww...smelly smelly
-in! dire need of a shower!
+==English==
+===Proper noun===
+'''John'''
+
+# a male given name
