--- a/wiki/%E5%A9%89.wikitext
+++ b/wiki/%E5%A9%89.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#amiable, congenial
-*# restrained
+*# [[amiable]], [[congenial]]
+*# [[restrained]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,32 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yun2
 
+===Compounds===
+*[[婉辞]]
+*[[婉和]]
+*[[婉丽]]
+*[[婉媚]]
+*[[婉妙]]
+*[[婉曲]]
+*[[婉商]]
+*[[婉顺]]
+*[[婉谢]]
+*[[婉言]]
+*[[婉约]]
+*[[婉转]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[えん]] (en)
 ** '''[[Kun]]''': [[うつくしい]] (utsukushii)
+
+===Compounds===
+*[[婉曲]]
 
 * '''Other info''':  
 
