--- a/wiki/%E6%89%BE.wikitext
+++ b/wiki/%E6%89%BE.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#search, seek, look for
+*# [[search]], [[seek]], [[look for]]
 *# find
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,39 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jaau2
 
+===Compounds===
+*[[找别扭]]
+*[[找病]]
+*[[找补]]
+*[[找不自在]]
+*[[找碴儿]]
+*[[找岔子]]
+*[[找刺儿]]
+*[[找倒霉]]
+*[[找对象]]
+*[[找借口]]
+*[[找乐子]]
+*[[找麻烦]]
+*[[找没趣儿]]
+*[[找便宜]]
+*[[找平]]
+*[[找婆家]]
+*[[找齐]]
+*[[找钱]]
+*[[找窍门]]
+*[[找事]]
+*[[找死]]
+*[[找台阶儿]]
+*[[找头]]
+*[[找寻]]
+*[[找辙]]
+*[[找主]], [[找主儿]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[か]] (ka), [[げ]] (ge), [[そう]] (sō)
