--- a/wiki/%E8%83%B6.wikitext
+++ b/wiki/%E8%83%B6.wikitext
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#glue, gum, resin, rubber
+*# [[glue]], [[gum]], [[resin]], [[rubber]]
 *# sound
 *# shin bone
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,11 +35,39 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[膠]]
 
+===Compounds===
+*[[胶版]]
+*[[胶版纸]]
+*[[胶布]]
+*[[胶带]]
+*[[胶合]]
+*[[胶合板]]
+*[[胶结]]
+*[[胶卷]], [[胶卷儿]]
+*[[胶木]]
+*[[胶囊]]
+*[[胶泥]]
+*[[胶黏]]
+*[[胶皮]]
+*[[胶片]]
+*[[胶乳]]
+*[[胶水]], [[胶水儿]]
+*[[胶体溶液]]
+*[[胶鞋]]
+*[[胶靴]]
+*[[胶印]]
+*[[胶原]]
+*[[胶原病]]
+*[[胶粘剂]]
+*[[胶质]]
+*[[胶柱鼓瑟]]
+*[[胶着]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こう]] (kō), [[ぎょう]] (gyō)
