--- a/wiki/%E9%9E%B5.wikitext
+++ b/wiki/%E9%9E%B5.wikitext
@@ -1,3 +1,5 @@
+* '''Alternate form''': [[鞋]]
+
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 177''': [[Wiktionary:Chinese radical index 革|革]]+10 strokes
 
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 19|19]]
@@ -11,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#shoes
-*# boots
+*# [[shoes]]
+*# [[boots]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,7 +35,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[あい]] (ai), [[かい]] (kai)
