--- a/wiki/%E9%9E%8B.wikitext
+++ b/wiki/%E9%9E%8B.wikitext
@@ -1,3 +1,5 @@
+* '''Alternate form''': [[鞵]]
+
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 177''': [[Wiktionary:Chinese radical index 革|革]]+6 strokes
 
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 15|15]]
@@ -10,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': shoes, footwear in general
+* '''Common Meaning''': [[shoe]]s, [[footwear]] in general
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +28,31 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': haai4
 
+===Compounds===
+*[[鞋拔子]]
+*[[鞋帮]], [[鞋帮儿]]
+*[[鞋带]], [[鞋带儿]]
+*[[鞋底]], [[鞋底儿]]
+*[[鞋垫]], [[鞋垫儿]]
+*[[鞋粉]]
+*[[鞋跟]], [[鞋跟儿]]
+*[[鞋号]]
+*[[鞋尖]], [[鞋尖儿]]
+*[[鞋匠]]
+*[[鞋口]]
+*[[鞋里]]
+*[[鞋面]], [[鞋面儿]]
+*[[鞋铺]]
+*[[鞋刷]], [[鞋刷儿]]
+*[[鞋眼]], [[鞋眼儿]]
+*[[鞋油]]
+*[[鞋子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[あい]] (ai), [[かい]] (kai)
