--- a/wiki/%E7%A2%98.wikitext
+++ b/wiki/%E7%A2%98.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': iodine
+* '''Common Meaning''': [[iodine]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,18 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': din2
 
+===Compounds===
+*[[碘酊]]
+*[[碘化银]]
+*[[碘酒]]
+*[[碘片]]
+*[[碘钨灯]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[てん]] (ten)
