--- a/wiki/%E5%9E%AB.wikitext
+++ b/wiki/%E5%9E%AB.wikitext
@@ -16,7 +16,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,27 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[墊]]
+
+===Compounds===
+*[[垫板]]
+*[[垫背]]
+*[[垫补]]
+*[[垫不起]]
+*[[垫场]]
+*[[垫底儿]]
+*[[垫付]]
+*[[垫话]]
+*[[垫肩]]
+*[[垫脚]]
+*[[垫脚石]]
+*[[垫款]]
+*[[垫平]]
+*[[垫圈]], [[垫圈儿]]
+*[[垫上运动]]
+*[[垫戏]]
+*[[垫用]]
+*[[垫支]]
+*[[垫子]]
 
 * '''Other info''': 
 
