--- a/wiki/teh.wikitext
+++ b/wiki/teh.wikitext
@@ -1,7 +1,6 @@
-==Malay==
+==Teh==
 '''teh'''
 
-# [[tea]]
+# [[the]]
 
-====Synonyms====
-*[[ca]]
+Means "the" but in a greater sense. If you say ""this is teh shit" it is '''the''' shit.
