--- a/wiki/teh.wikitext
+++ b/wiki/teh.wikitext
@@ -1,6 +1,7 @@
-==Teh==
+==Malay==
 '''teh'''
 
-# [[the]]
+# [[tea]]
 
-Means "the" but in a greater sense. If you say ""this is teh shit" it is '''the''' shit.
+====Synonyms====
+*[[ca]]
