typo; expanded <Katie#65675>

--- a/wiki/Katie.wikitext
+++ b/wiki/Katie.wikitext
@@ -1,4 +1,5 @@
-===Proper naun===
+==English==
+===Proper noun===
 '''Katie'''
 
-# a female given name
+#A female [[given name]], a [[diminutive]] of '''[[Catherine]]''' or any of its variant spellings.
