--- a/wiki/john.wikitext
+++ b/wiki/john.wikitext
@@ -2,4 +2,20 @@
 ===Proper noun===
 '''John'''
 
-# a male given name
+#A male [[given name]].
+
+====Variant spellings====
+*[[Jon]]
+
+====Female equivalents====
+*[[Jean]], [[Joan]], [[Joanna]], [[Joanne]]<!--please confirm these-->
+
+====Diminutives====
+*[[Johnnie]], [[Johnny]]
+
+====Translations====
+
+*Finnish: [[Johan]]
+*French: [[Jean#French|Jean]]
+*German: [[Johannes]]
+*Italian: [[Giovanni]]
