--- a/wiki/john.wikitext
+++ b/wiki/john.wikitext
@@ -16,6 +16,6 @@
 ====Translations====
 
 *Finnish: [[Johan]]
-*French: [[Jean#French|Jean]]
+*French: [[Jean]]
 *German: [[Johannes]]
 *Italian: [[Giovanni]]
