--- a/wiki/teh.wikitext
+++ b/wiki/teh.wikitext
@@ -1,3 +1,11 @@
+==English==
+
+===Definite Article===
+'''teh'''
+
+# Deliberate misspelling of [[the]] often used in [[gaming]] contexts in the superlative sense.
+#: ''This is teh game for your new box!''
+
 ==Malay==
 '''teh'''
 
@@ -5,6 +13,3 @@
 
 ====Synonyms====
 *[[ca]]
-
-
-Also means '''the'''. It is better then the Bears, it is '''Teh''' Bears.
