/* Definite Article */ <teh#55457>

--- a/wiki/teh.wikitext
+++ b/wiki/teh.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
-===Definite Article===
+===Definite article===
 '''teh'''
 
-# Deliberate misspelling of [[the]] often used in [[gaming]] contexts in the superlative sense.
+# Deliberate misspelling of '''[[the]]''' often used in [[gaming]] contexts in the superlative sense.
 #: ''This is teh game for your new box!''
 
 ==Malay==
