/* Proper noun */ +Katy, +railroad sense <Katie#65675>

--- a/wiki/Katie.wikitext
+++ b/wiki/Katie.wikitext
@@ -1,5 +1,7 @@
 ==English==
 ===Proper noun===
-'''Katie'''
+'''Katie''', also '''Katy'''
 
-#A female [[given name]], a [[diminutive]] of '''[[Catherine]]''' or any of its variant spellings.
+# A female [[given name]], a [[diminutive]] of '''[[Catherine]]''' or any of its variant spellings.
+# The Missouri, Kansas and Texas (M.K.T) Railroad.
+#: ''When the Katie came through, the town's entire economy and culture changed.''
