definition for the verb (please improve) <scrabble#40504>

--- a/wiki/scrabble.wikitext
+++ b/wiki/scrabble.wikitext
@@ -1,8 +1,9 @@
 ==English==
-===Verb===
-'''to scrabble''' ([[scrabbled]], 
+===Intransitive verb===
+'''to scrabble''' ('''[[scrabbling]]''', '''[[scrabbled]]''', '''[[scrabbled]]''')
 
-<!--needs a definition-->
+#To move something about by making rapid movements back and forth with the hands or paws.
+#:''She was on her hands and knees scrabbling in the mud, looking for her missing wedding ring.''
 
 ===Proper noun===
 '''Scrabble'''&reg;
