--- a/wiki/bubblehead.wikitext
+++ b/wiki/bubblehead.wikitext
@@ -1,7 +1,5 @@
 == English ==
-
 === Noun ===
+'''bubblehead''' (''plural'' '''bubbleheads''')
 
-'''bubblehead'''
-
-#(slang) A submarine sailor.
+#(''slang'') A [[submariner]].
