--- a/wiki/karaoke.wikitext
+++ b/wiki/karaoke.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-From Japanese [[]], open, + [[]], orchestra
+From Japanese [[]] (kara), open, + [[]] (oke), orchestra
 
 ===Noun===
 '''karaoke''' (''[[uncountable]]'')
