--- a/wiki/karaoke.wikitext
+++ b/wiki/karaoke.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-From Japanese [[]] (kara), open, + [[]] (oke), orchestra
+From Japanese [[空]] ([[から]], kara), open, + [[オケ]] (oke; [[オーケストラ]]), orchestra
 
 ===Noun===
 '''karaoke''' (''[[uncountable]]'')
