/* See also */ <cherubim#65598>

--- a/wiki/cherubim.wikitext
+++ b/wiki/cherubim.wikitext
@@ -10,5 +10,6 @@ Hebrew [[כרוב]], [[cherub]] + &rlm;[[-ים]]&lrm;, masculine plural suffix
 ====Translations====
 *Hebrew: [[כרבים|כְּרֻבִים]] ''m pl''
 
-===See also===
-*[[cherubs]] (''modern plural'')
+===Plural===
+*'''cherubs''' (''modern plural'')<p>
+*(''archaic plural''))'''cherubim'''
