--- a/wiki/technophile.wikitext
+++ b/wiki/technophile.wikitext
@@ -1,1 +1,3 @@
-A person very enthusiastic about [[technology]], especially exciting computer and media technology.
+
+== Noun ==
+1. A person very enthusiastic about [[technology]], especially one who enjoys the advances in computer and media technology.
