--- a/wiki/technophile.wikitext
+++ b/wiki/technophile.wikitext
@@ -1,3 +1,3 @@
-
 == Noun ==
-1. A person very enthusiastic about [[technology]], especially one who enjoys the advances in computer and media technology.
+'''Technophile'''
+#A person very enthusiastic about [[technology]], especially one who enjoys the advances in computer and media technology.
