--- a/wiki/the.wikitext
+++ b/wiki/the.wikitext
@@ -12,7 +12,7 @@
 #: ''The hotter the better.''
 #: ''The more I think about it, the weaker it looks.''
 #: ''It looks weaker and weaker, the more I think about it.''
-#: ''The more money donated, the more books purchased and the more happy children.''
+#: ''The more money donated, the more books purchased and the more happy children there are.''
 # With a [[comparative]], and often with ''for it'', indicates a result in the direction of the comparative.  This can be negated with ''none''.
 #: ''It was a difficult time, but I'm the wiser for it.''
 #: ''It was a difficult time, and I'm none the wiser for it.''
