--- a/wiki/scant.wikitext
+++ b/wiki/scant.wikitext
@@ -5,7 +5,9 @@
 #:  "After his previous escapades, Mary had scant reason to believe John."
 
 ====Synonyms====
-
+*[[few]]
+*[[little]] (used above)`
+*[[slight]]
 ====Antonyms====
 *[[ample]]
 *[[plenty]]
