--- a/wiki/scant.wikitext
+++ b/wiki/scant.wikitext
@@ -6,8 +6,9 @@
 
 ====Synonyms====
 *[[few]]
-*[[little]] (used above)`
+*[[little]] (as used above)
 *[[slight]]
+
 ====Antonyms====
 *[[ample]]
 *[[plenty]]
