--- a/wiki/technophile.wikitext
+++ b/wiki/technophile.wikitext
@@ -1,3 +1,7 @@
 == Noun ==
 '''Technophile'''
 #A person very enthusiastic about [[technology]], especially one who enjoys the advances in computer and media technology.
+
+===Related Terms===
+*technophilia
+*technophilic
