--- a/wiki/theocratic.wikitext
+++ b/wiki/theocratic.wikitext
@@ -1,2 +1,3 @@
-*1.Of [[theocracy]]
+==Adjective==
+*1.Pertaining to  [[theocracy]]
 *2.(among Jehovah's Witnesses):Conforming to God-rule,by Christian behavior.
