--- a/wiki/tawdry.wikitext
+++ b/wiki/tawdry.wikitext
@@ -3,4 +3,4 @@
 #[[Cheap]] and [[gaudy]] or [[showy]].
 
 ===Etymology===
-*'''Tawdry''': From "St. Audrey", the woman honored by the St. Audrey’s Fair, where cheap and gaudy lace were sold.
+*'''Tawdry''': From “St. Audrey”, the woman honored by the St. Audrey’s Fair, where cheap and gaudy lace were sold.
