/* Related Terms */ <technophile#65691>

--- a/wiki/technophile.wikitext
+++ b/wiki/technophile.wikitext
@@ -3,5 +3,5 @@
 #A person very enthusiastic about [[technology]], especially one who enjoys the advances in computer and media technology.
 
 ===Related Terms===
-*technophilia
-*technophilic
+*technophilia ''n''
+*technophilic ''adj''
