--- a/wiki/technophile.wikitext
+++ b/wiki/technophile.wikitext
@@ -1,4 +1,5 @@
-== Noun ==
+=={{en}}==
+=== Noun ===
 '''Technophile'''
 #A person very enthusiastic about [[technology]], especially one who enjoys the advances in computer and media technology.
 
