--- a/wiki/theism.wikitext
+++ b/wiki/theism.wikitext
@@ -1,1 +1,2 @@
-Theism(from Greek Θεϊσμός, theismos):Belief in the existence of [[God]],especially by or through revelation.
+==Noun==
+'''Theism''' (from Greek Θεϊσμός):Belief in the existence of [[God]],especially by or through revelation.
