--- a/wiki/Jewish.wikitext
+++ b/wiki/Jewish.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Noun===
+===Adjective===
 '''Jewish''' (''[[comparative]]'' '''more Jewish''', ''[[superlative]]'' '''most Jewish''')
 
 #Of or relating to [[Jew]]s, their religion or their culture.
