--- a/wiki/idiot.wikitext
+++ b/wiki/idiot.wikitext
@@ -4,6 +4,20 @@
 
 #  A common term for a person of low general intelligence.
 #  A [[medical]] or [[psychological]] term meaning a person who has an intelligence quotient (IQ) below 20 (or 30?)
+# In ancient Athens, an idiot was a person who declined to take part in public life, such as democratic city government. Since such activities were honorable and could directly affect all citizens, idiot was a term of derision.
+
+The word comes from the Greek word ιδιωτης, idiôtês, "a private citizen, individual", from ιδιος, idios, "private".
+
+An example of the word's use is as follows:-
+
+"Dave, You know that homework you leant me?"
+
+"Yes."
+
+"Well, I kind of lost it."
+
+"You '''Idiot'''!"
+
 
 ====Related terms====
 *[[eejit]] ([[Hiberno English]])
