--- a/wiki/agnosticism.wikitext
+++ b/wiki/agnosticism.wikitext
@@ -1,7 +1,7 @@
 Etymology
-a- + gnostic + -ism
+[[a]]- + gnostic + -[[ism]]
 
-Noun
+==Noun==
 agnosticism
 
-the belief that knowledge of any gods is impossible.
+the belief that knowledge of any [[god]]s is impossible.
