--- a/wiki/agnosticism.wikitext
+++ b/wiki/agnosticism.wikitext
@@ -1,7 +1,7 @@
-Etymology
-[[a]]- + gnostic + -[[ism]]
 
 ==Noun==
 agnosticism
 
 the belief that knowledge of any [[god]]s is impossible.
+==Etymology==
+[[a]]- + gnostic + -[[ism]]
