made redirect to [[-ism]] <ism#65700>

--- a/wiki/ism.wikitext
+++ b/wiki/ism.wikitext
@@ -1,3 +1,1 @@
-==Suffix==
-*1.religion or philosophy examples,Calvinism,Buddhism<p>
-*2.A process,examples, mechanism,vulcanism,etc
+#REDIRECT [[-ism]]
