added link <agnosticism#63894>

--- a/wiki/agnosticism.wikitext
+++ b/wiki/agnosticism.wikitext
@@ -1,7 +1,8 @@
-
 ==Noun==
 agnosticism
 
 the belief that knowledge of any [[god]]s is impossible.
 ==Etymology==
 [[a]]- + gnostic + -[[ism]]
+==Extenal link==
+[http://en.wikipedia.org/wiki/Agnosticism See Wikipedia article on "Agnosticism"]
