/* Extenal link */ <agnosticism#63894>

--- a/wiki/agnosticism.wikitext
+++ b/wiki/agnosticism.wikitext
@@ -5,4 +5,4 @@ the belief that knowledge of any [[god]]s is impossible.
 ==Etymology==
 [[a]]- + gnostic + -[[ism]]
 ==Extenal link==
-[http://en.wikipedia.org/wiki/Agnosticism See Wikipedia article on "Agnosticism"]
+[http://en.wikipedia.org/wiki/Agnosticism See Wikipedia article on "'''Agnosticism'''"]
