--- a/wiki/alloy.wikitext
+++ b/wiki/alloy.wikitext
@@ -16,6 +16,7 @@
 *Indonesian: [[padu|paduan]] [[logam]]
 *Japanese: [[合金]] (ごうきん, gōkin)
 *Slovak: [[zliatina]] ''f''
+*Spanish [[aleation]] ''f''
 *Swedish: [[legering]] ''c''
 
 ===Verb===
