--- a/wiki/apostle.wikitext
+++ b/wiki/apostle.wikitext
@@ -1,1 +1,4 @@
-from greek apostolos, meaning one sent as an envoy or messenger. In Christianity, used to refer to Jesus's twelve disciples (and also those later co-opted into this body, i.e. Paul).
+==Noun==
+One sent as an envoy or messenger<p> In Christianity, used to refer to Jesus's twelve disciples (and also those later addressed with this title, i.e. Paul and Barnabas).
+==Etymology==
+from greek ''apostolos'',"one sent forth"
