--- a/wiki/apostle.wikitext
+++ b/wiki/apostle.wikitext
@@ -1,4 +1,4 @@
 ==Noun==
 One sent as an envoy or messenger<p> In Christianity, used to refer to Jesus's twelve disciples (and also those later addressed with this title, i.e. Paul and Barnabas).
 ==Etymology==
-from greek ''apostolos'',"one sent forth"
+from [[Greek]] ''apostolos'',"one sent forth"
