--- a/wiki/Orthodox_Judaism.wikitext
+++ b/wiki/Orthodox_Judaism.wikitext
@@ -1,2 +1,3 @@
-==Noun==
-The traditional branch of [[Judaism]],believing the Torah was literally given to Moses by [[God]].
+==English==
+===Noun===
+#The traditional branch of [[Judaism]], believing the Torah was literally given to Moses by [[God]].
