--- a/wiki/New_Testament.wikitext
+++ b/wiki/New_Testament.wikitext
@@ -1,2 +1,3 @@
-==Noun==
-The part of the Bible,written by Christians,includes,the four [[Gospel]]s,the [[Epistle]]s,and the Book of Revelaton.
+==English==
+===Proper Noun===
+#Second half of the Christian Bible, includes,the four [[Gospel]]s, the [[Epistle]]s, and the Book of Revelaton.
