--- a/wiki/New_Testament.wikitext
+++ b/wiki/New_Testament.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Proper Noun===
-#Second half of the Christian Bible, includes,the four [[Gospel]]s, the [[Epistle]]s, and the Book of Revelaton.
+#Second half of the Christian Bible, includes the four [[Gospel]]s, the [[Epistle]]s, and the Book of Revelaton.
