--- a/wiki/Christ.wikitext
+++ b/wiki/Christ.wikitext
@@ -7,8 +7,9 @@ From Greek Χριστος (Χριστ-ος), 'anointed' or [[Messiah]].
 *[[w:IPA|IPA]]: /kraɪst/
 *[[w:SAMPA|SAMPA]]: /kraIst/
 
-===Noun===
-
+===Proper Noun===
+#(''Christianity'') ''Lit.'' The annointed one.  The [[messiah]] who was named Jesus Christ.
+#One who claims to be a messiah:   ''For there shall arise false'' Christs, ''and false prophets, and shall shew great signs and wonders; insomuch that, if it were possible, they shall deceive the very elect. (Matthew 24:24)'
 
 ====Translations====
 *Chinese: [[基督]] (Jidu)
