--- a/wiki/gospel.wikitext
+++ b/wiki/gospel.wikitext
@@ -1,6 +1,7 @@
-==Noun==
-The story of [[Christ]],as related in the Bible books of ,Matthew,Mark,Luke and John<p> 
-==Etymology==
-Old English ''godspel'' god- '''good'''"+ '''spel''' "''message''"
-==Translations==
-'''spanish''', '''evangelio'''
+==English==
+===Noun===
+#The story of [[Christ]],as related in the Bible books of ,Matthew,Mark,Luke and John<p> 
+===Etymology===
+Old English ''godspel'' god- "''good''"+ spel "''message''"
+===Translations===
+*'''spanish''', evangelio
