--- a/wiki/Holy_Spirit.wikitext
+++ b/wiki/Holy_Spirit.wikitext
@@ -1,7 +1,7 @@
 ===Proper noun===
 '''[[Holy]] [[Spirit]]'''
 
-(''Christian'') One of the three parts of the [[Holy Trinity]], the others being the [[Father]] ([[God]]) and the [[Son]] ([[Jesus]]). Has superceded the term [[Holy Ghost]] in many [[Christian]] [[sect]]s.
+(''Christian'') One of the three parts of the [[Holy Trinity]], the others being the [[Father]] ([[God]]) and the [[Son]] ([[Jesus]]). Has superceded the term [[Holy Ghost]] in many [[Christian]] [[denomination]]s.
 
 ====Synonyms====
 *[[Holy Ghost]]
