added etymology+related word <sect#2331>

--- a/wiki/sect.wikitext
+++ b/wiki/sect.wikitext
@@ -1,7 +1,9 @@
 ==Noun==
 
 #a [[cult]] or [[religious]] movement, a group sharing particular (often [[unorthodox]]) [[political]] and/or religious [[beliefs]]. (a religious ''sect'')
-
+==Etymology==
+From Latin ''secta'',a division<P>
+==Related Word==
 [[sectarian]]
 
 ===Translations===
