Reverted edit of MrSmart, changed back to last version by Hippietrail <cherubim#65598>

--- a/wiki/cherubim.wikitext
+++ b/wiki/cherubim.wikitext
@@ -10,6 +10,5 @@ Hebrew [[כרוב]], [[cherub]] + &rlm;[[-ים]]&lrm;, masculine plural suffix
 ====Translations====
 *Hebrew: [[כרבים|כְּרֻבִים]] ''m pl''
 
-===Plural===
-*'''cherubs''' (''modern plural'')<p>
-*(''archaic plural''))'''cherubim'''
+===See also===
+*[[cherubs]] (''modern plural'')
