--- a/wiki/legible.wikitext
+++ b/wiki/legible.wikitext
@@ -1,11 +1,24 @@
 === Adjective ===
-
-'''legible'''
-
 # being clear enough to be read, [[readable]]
+
+====Antonyms====
+*[[illegible]]
+
+====Similar====
+*[[clean]]
+*[[clear]]
+*[[decipherable]]
+*[[fair]]
+*[[readable]]
+
+===See also===
+[[legibly]]
 
 === Translations ===
 *[[Dutch]]: [[leesbaar]]
 *[[Esperanto]]: [[legebla]]
 *[[French]]: [[lisible]]
+*[[German]]: [[leserlich]]
 *[[Interlingua]]: [[legible]]
+*[[Italian]]: [[leggibile]]
+*[[Russian]]: [[разборчивый]]
