/* See Also */ +rabbi, Reb <Judaism#65529>

--- a/wiki/Judaism.wikitext
+++ b/wiki/Judaism.wikitext
@@ -23,3 +23,5 @@ Hebrew ''Yehuda'' (Judah) + [[-ism]]. <!-- Please add native Hebrew spelling -->
 *[[Christianity]]
 *[[Islam]]
 *[[monotheism]]
+*[[rabbi]]
+*[[Reb]]
