Participles & Infinitives. <exponere#65709>

--- a/wiki/exponere.wikitext
+++ b/wiki/exponere.wikitext
@@ -6,3 +6,41 @@
 ('''exp&#333;n&#333;''', '''exp&#333;nere''', '''exposu&#299;''', '''expositum''')
 # To put outside, to expose.
 # To explain.
+
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> exp&#333;n&#275;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> expositus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> exposit&#363;rus
+|style="background:#F7F7F5;"| <big> exp&#333;nendus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> exp&#333;nere
+|style="background:#F7F7F5;" width=125px| <big> exp&#333;n&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> exposuisse
+|style="background:#F7F7F5;"| <big> expositus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> exposit&#363;rus esse
+|style="background:#F7F7F5;"| <big> expositum &#299;r&#299;
+|}
