--- a/wiki/exponere.wikitext
+++ b/wiki/exponere.wikitext
@@ -44,3 +44,196 @@
 |style="background:#F7F7F5;"| <big> exposit&#363;rus esse
 |style="background:#F7F7F5;"| <big> expositum &#299;r&#299;
 |}
+
+====Conjugation====
+Regular verb of the third conjugation (3).
+
+{| border="1" cellpadding="2"
+!style="background:#F1BC4E;" colspan=3| <small>''Number''
+!style="background:#F1BC4E;" colspan=3| <small>''Singular''
+!style="background:#F1BC4E;" colspan=3| <small>''Plural''
+|-
+!style="background:#F1BC4E;" colspan=3| <small>''Tense \ Person''
+!style="background:#F1BC4E;"| <small>''1.''
+!style="background:#F1BC4E;"| <small>''2.''
+!style="background:#F1BC4E;"| <small>''3.''
+!style="background:#F1BC4E;"| <small>''11.''
+!style="background:#F1BC4E;"| <small>''22.''
+!style="background:#F1BC4E;"| <small>''33.''
+|-
+!style="background:#54E9FA;" rowspan=12|<small>I<br>n<br>d<br>i<br>c<br>a<br>t<br>i<br>v<br>e<br><!-- <br>m<br>o<br>o<br>d<br> (default)-->
+!style="background:#54E9FA;" rowspan=6|<small>A<br>c<br>t<br>i<br>v<br>e<br><!-- <br>v<br>o<br>i<br>c<br>e <br>(default)-->
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"| exp&#333;n&#333; 
+|style="background:#FBFCE4;"| exp&#333;nis 
+|style="background:#FBFCE4;"| exp&#333;nit
+|style="background:#FBFCE4;"| exp&#333;nimus 
+|style="background:#FBFCE4;"| exp&#333;nitis 
+|style="background:#FBFCE4;"| exp&#333;nunt
+|-
+!style="background:#54E9FA;"| <small>''Future''
+|style="background:#FBFCE4;"| exp&#333;nam 
+|style="background:#FBFCE4;"| exp&#333;n&#275;s 
+|style="background:#FBFCE4;"| exp&#333;net
+|style="background:#FBFCE4;"| exp&#333;n&#275;mus 
+|style="background:#FBFCE4;"| exp&#333;n&#275;tis
+|style="background:#FBFCE4;"| exp&#333;nent
+|-
+!style="background:#54E9FA;"| <small>''Imperfect''
+|style="background:#FBFCE4;"| exp&#333;n&#275;bam 
+|style="background:#FBFCE4;"| exp&#333;n&#275;b&#257;s 
+|style="background:#FBFCE4;"| exp&#333;n&#275;bat
+|style="background:#FBFCE4;"| exp&#333;n&#275;b&#257;mus
+|style="background:#FBFCE4;"| exp&#333;n&#275;b&#257;tis 
+|style="background:#FBFCE4;"| exp&#333;n&#275;bant
+|-
+!style="background:#54E9FA;"| <small>''Perfect''
+|style="background:#FBFCE4;"| exposu&#299; 
+|style="background:#FBFCE4;"| exposuist&#299; 
+|style="background:#FBFCE4;"| exposuit
+|style="background:#FBFCE4;"| exposuimus
+|style="background:#FBFCE4;"| exposuistis
+|style="background:#FBFCE4;"| exposu&#275;runt
+|-
+!style="background:#54E9FA;"| <small>''Future Perfect''
+|style="background:#FBFCE4;"| exposuer&#333; 
+|style="background:#FBFCE4;"| exposueris
+|style="background:#FBFCE4;"| exposuerit
+|style="background:#FBFCE4;"| exposuerimus
+|style="background:#FBFCE4;"| exposueritis
+|style="background:#FBFCE4;"| exposuerint
+|-
+!style="background:#54E9FA;"| <small>''Pluperfect''
+|style="background:#FBFCE4;"| exposueram
+|style="background:#FBFCE4;"| exposuer&#257;s
+|style="background:#FBFCE4;"| exposuerat
+|style="background:#FBFCE4;"| exposuer&#257;mus
+|style="background:#FBFCE4;"| exposuer&#257;tis
+|style="background:#FBFCE4;"| exposuerant
+|-
+!style="background:#54E9FA;" rowspan=6| <small>P<br>a<br>s<br>s<br>i<br>v<br>e<!--<br>voice-->
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"| exp&#333;nor
+|style="background:#FBFCE4;"| exp&#333;neris
+|style="background:#FBFCE4;"| exp&#333;nitur
+|style="background:#FBFCE4;"| exp&#333;nimur
+|style="background:#FBFCE4;"| exp&#333;nimin&#299;
+|style="background:#FBFCE4;"| exp&#333;nuntur
+|-
+!style="background:#54E9FA;"|<small>''Future''
+|style="background:#FBFCE4;"| exp&#333;nar
+|style="background:#FBFCE4;"| exp&#333;n&#275;ris
+|style="background:#FBFCE4;"| exp&#333;n&#275;tur
+|style="background:#FBFCE4;"| exp&#333;n&#275;mur
+|style="background:#FBFCE4;"| exp&#333;n&#275;min&#299;
+|style="background:#FBFCE4;"| exp&#333;nentur
+|-
+!style="background:#54E9FA;"|<small>''Imperfect''
+|style="background:#FBFCE4;"| exp&#333;n&#275;bar
+|style="background:#FBFCE4;"| exp&#333;n&#275;b&#257;ris
+|style="background:#FBFCE4;"| exp&#333;n&#275;b&#257;tur
+|style="background:#FBFCE4;"| exp&#333;n&#275;b&#257;mur
+|style="background:#FBFCE4;"| exp&#333;n&#275;b&#257;min&#299;
+|style="background:#FBFCE4;"| exp&#333;n&#275;bantur
+|-
+!style="background:#54E9FA;"|<small>''Perfect''
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>sum 
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>es  
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>est
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>sumus 
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>estis  
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>sunt
+|-
+!style="background:#54E9FA;"|<small>''Future Perfect''
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>er&#333;  
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>eris 
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>erit
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>erimus 
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>eritis 
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>erunt
+|-
+!style="background:#54E9FA;"|<small>''Pluperfect''
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>eram
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>er&#257;s 
+|style="background:#FBFCE4;"| expositus<font color="red"><sup>1</sup></font><br>erat
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>er&#257;mus 
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>er&#257;tis 
+|style="background:#FBFCE4;"| exposit&#299; <font color="red"><sup>2</sup></font><br>erant
+|-
+!style="background:#92B887;" rowspan=8|<small>S<br>u<br>b<br>j<br>u<br>n<br>c<br>t<br>i<br>v<br>e<br><!-- <br>m<br>o<br>o<br>d-->
+!style="background:#92B887;" rowspan=4|<small>A<br>c<br>t<br>i<br>v<br>e<!--<br>voice<br>(default)-->
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| exp&#333;nam
+|style="background:#E7FEE9;"| exp&#333;n&#257;s
+|style="background:#E7FEE9;"| exp&#333;nat
+|style="background:#E7FEE9;"| exp&#333;n&#257;mus
+|style="background:#E7FEE9;"| exp&#333;n&#257;tis
+|style="background:#E7FEE9;"| exp&#333;nant
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| exp&#333;nerem
+|style="background:#E7FEE9;"| exp&#333;ner&#275;s
+|style="background:#E7FEE9;"| exp&#333;neret
+|style="background:#E7FEE9;"| exp&#333;ner&#275;mus
+|style="background:#E7FEE9;"| exp&#333;ner&#275;tis
+|style="background:#E7FEE9;"| exp&#333;nerent
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"| exposuerim
+|style="background:#E7FEE9;"| exposuer&#299;s
+|style="background:#E7FEE9;"| exposuerit
+|style="background:#E7FEE9;"| exposuer&#299;mus
+|style="background:#E7FEE9;"| exposuer&#299;tis
+|style="background:#E7FEE9;"| exposuerint
+|-
+!style="background:#92B887;"|<small>''Pluperfect''
+|style="background:#E7FEE9;"| exposuissem
+|style="background:#E7FEE9;"| exposuiss&#275;s
+|style="background:#E7FEE9;"| exposuisset
+|style="background:#E7FEE9;"| exposuiss&#275;mus
+|style="background:#E7FEE9;"| exposuiss&#275;tis
+|style="background:#E7FEE9;"| exposuissent
+|-
+!style="background:#92B887;" rowspan=4|<small>P<br>a<br>s<br>s<br>i<br>v<br>e<!--<br>voice-->
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| exp&#333;nar
+|style="background:#E7FEE9;"| exp&#333;n&#257;ris
+|style="background:#E7FEE9;"| exp&#333;n&#257;tur
+|style="background:#E7FEE9;"| exp&#333;n&#257;mur
+|style="background:#E7FEE9;"| exp&#333;n&#257;min&#299;
+|style="background:#E7FEE9;"| exp&#333;nantur
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| exp&#333;nerer
+|style="background:#E7FEE9;"| exp&#333;ner&#275;ris
+|style="background:#E7FEE9;"| exp&#333;ner&#275;tur
+|style="background:#E7FEE9;"| exp&#333;ner&#275;mur
+|style="background:#E7FEE9;"| exp&#333;ner&#275;min&#299;
+|style="background:#E7FEE9;"| exp&#333;nerentur
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"| expositus<font color="red"><sup>1</sup></font><br>sim  
+|style="background:#E7FEE9;"| expositus<font color="red"><sup>1</sup></font><br>s&#299;s  
+|style="background:#E7FEE9;"| expositus<font color="red"><sup>1</sup></font><br>sit
+|style="background:#E7FEE9;"| exposit&#299; <font color="red"><sup>2</sup></font><br>s&#299;mus  
+|style="background:#E7FEE9;"| exposit&#299; <font color="red"><sup>2</sup></font><br>s&#299;tis  
+|style="background:#E7FEE9;"| exposit&#299; <font color="red"><sup>2</sup></font><br>sint
+|-
+!style="background:#92B887;"|<small>''Pluperfect''
+|style="background:#E7FEE9;"| expositus<font color="red"><sup>1</sup></font><br>essem
+|style="background:#E7FEE9;"| expositus<font color="red"><sup>1</sup></font><br>ess&#275;s
+|style="background:#E7FEE9;"| expositus<font color="red"><sup>1</sup></font><br>esset
+|style="background:#E7FEE9;"| exposit&#299; <font color="red"><sup>2</sup></font><br>ess&#275;mus  
+|style="background:#E7FEE9;"| exposit&#299; <font color="red"><sup>2</sup></font><br>ess&#275;tis  
+|style="background:#E7FEE9;"| exposit&#299; <font color="red"><sup>2</sup></font><br>essent
+|-
+!style="background:#BD91BD;" colspan=3| <small>Imperative
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| exp&#333;ne
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| exp&#333;nite
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|}
+<font color="red"> 1 </font> = expositus / exposita / expositum  <br>
+<font color="red"> 2 </font> = exposit&#299; / expositae / exposita <br>
