reformatted=translation <Satan#65489>

--- a/wiki/Satan.wikitext
+++ b/wiki/Satan.wikitext
@@ -1,1 +1,7 @@
-'''Satan'''(noun)from [[Hebrew]],''satan'',"[[adversary]]"the [[Devil]],the Tempter,the Chief Rebel against [[God]] mentioned in the [[Bible]]
+'''Satan'''
+==Noun==
+the [[Devil]],the Tempter,the Chief Rebel against [[God]] mentioned in the [[Bible]]
+==Etymology==
+from [[Hebrew]],''satan'',"[[adversary]]",
+==Translation==
+'''spanish''','''Satanas'''
