--- a/wiki/devil.wikitext
+++ b/wiki/devil.wikitext
@@ -4,7 +4,7 @@ From Latin '''[[diabolus]]''', from Greek '''diabolos''' greek for [[slanderer]]
 ===Noun===
 '''devil''' (plural '''[[devils]]''')
 
-#''(Often capitalized)'' A creature of Hell; As ''The Devil'': Satan.
+#''(Often capitalized)'' A creature of Hell; As ''The Devil'': [[Satan]].
 #The bad part of the conscience; the opposite to the [[angel]].
 #: ''The devil in me wants to let him suffer.''
 #A wicked or naughty or  person, or one who harbors reckless, spirited energy, especially in a mischevious way.  Usually said of a young child.
