--- a/wiki/reb.wikitext
+++ b/wiki/reb.wikitext
@@ -1,7 +1,24 @@
 ==English==
 
 ===Noun===
-
 '''reb'''
 
-#A Confederate soldier.
+# A Confederate soldier.
+
+====Etymology====
+Shortened form of ''[[rebel]]''.
+
+====Related Terms====
+*[[Johnny Reb]]
+*[[rebel]]
+
+===Noun===
+'''Reb'''
+
+# Shortened form of [[Rebbe]]
+# An honorific used by traditional [[Jew]]s. <!-- Need more specifics -->
+
+===Proper Noun===
+'''Reb'''
+
+# Shortened form of [[Rebecca]].
