/* See Also */ Reb -> Rebbe <Judaism#65529>

--- a/wiki/Judaism.wikitext
+++ b/wiki/Judaism.wikitext
@@ -24,4 +24,4 @@ Hebrew ''Yehuda'' (Judah) + [[-ism]]. <!-- Please add native Hebrew spelling -->
 *[[Islam]]
 *[[monotheism]]
 *[[rabbi]]
-*[[Reb]]
+*[[Rebbe]]
