--- a/wiki/devil.wikitext
+++ b/wiki/devil.wikitext
@@ -2,7 +2,7 @@
 From Latin '''[[diabolus]]''', from Greek '''diabolos''' greek for [[slanderer]]
 
 ===Noun===
-'''devil''' (plural '''[[devil]]'''s)
+'''devil''' (plural [[devil]]s)
 
 #''(Often capitalized)'' A creature of Hell; As ''The Devil'': [[Satan]].
 #The bad part of the conscience; the opposite to the [[angel]].
