--- a/wiki/devil.wikitext
+++ b/wiki/devil.wikitext
@@ -1,5 +1,6 @@
 ===Etymology===
-From Latin '''[[diabolus]]''', from Greek '''diabolos''' greek for [[slanderer]]
+From Latin '''[[diabolus]]''', from '''Greek: διάβολος  
+''' [[slanderer]]
 
 ===Noun===
 '''devil''' (plural [[devil]]s)
