--- a/wiki/destroy.wikitext
+++ b/wiki/destroy.wikitext
@@ -1,6 +1,6 @@
 == English ==
 
-====Hyphenation====
+===Hyphenation===
 :de&middot;stroy
 
 === Transitive Verb ===
@@ -9,6 +9,9 @@
 #: ''"The earthquake destroyed several apartment complexes."''
 # (''computing'') To release resources on a computer.
 #: ''"The [[memory leak]] happened because we forgot to destroy the temporary lists."''
+# defeat soundly
+# as of animals
+#: ''"to destroy a [[rabid]] dog"''
 
 ====Synonyms====
 *[[annihilate]]
