--- a/wiki/destroy.wikitext
+++ b/wiki/destroy.wikitext
@@ -26,32 +26,8 @@
 *[[destroyer]]
 
 ====Translations====
-'''to damage beyond use or repair'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-|}
-
+*[[French]]: [[détruire]]
+*[[German]]: [[vernichten]], [[ausrotten]], [[zerstören]]
+*[[Italian]]: [[distruggere]]
 *[[Russian]]: [[разрушать]] /razruSat'/
-
-'''to release resources on a computer'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-|}
+*[[Spanish]]: [[destruir]]
