/* Declension */ Table reformat. <quantum#64384>

--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -14,34 +14,66 @@
 
 ====Declension====
 First and second declensions.
-
 {| cellpadding="5" border="1"
-!style="background:#47DCF8;"|  ''Case <br> <math> \downarrow </math> ''
-!style="background:#47DCF8;"| ''Gender & N<sup>o</sup>'' <math> \rightarrow </math> 
+!style="background:#47DCF8;"| ''Number''
+!style="background:#47DCF8;" colspan=3| ''Singular''
+|
+!style="background:#47DCF8;" colspan=3| ''Plural''
+|-
+<!--!style="background:#47DCF8;"|  ''Case <br> <math> \downarrow </math> ''
+!style="background:#47DCF8;"| ''Gender'' <math> \rightarrow </math>--> 
+!style="background:#F1BC4E;"|''Case \ Gender''
 !style="background:#F1BC4E;"| ''M.''
 !style="background:#F1BC4E;"| ''F.''
 !style="background:#F1BC4E;"| ''N.''
+|
 !style="background:#F1BC4E;"| ''MM.''
 !style="background:#F1BC4E;"| ''FF.''
 !style="background:#F1BC4E;"| ''NN.''
 |-
-!colspan=2 style="background:#F1BC4E;"| ''Nominative''
-| <big> quantus </big> || <big> quanta </big>|| <big> quantum</big>
-| <big>quant&#299;</big> || <big>quantae</big> || <big>quanta</big>
+!style="background:#F1BC4E;"| ''Nominative''
+|style="background:#F5F5EE;"| <big> quantus </big> 
+|style="background:#F5F5EE;"| <big> quanta </big>
+|style="background:#F5F5EE;"| <big> quantum</big>
+|
+|style="background:#F5F5EE;"| <big>quant&#299;</big> 
+|style="background:#F5F5EE;"| <big>quantae</big> 
+|style="background:#F5F5EE;"| <big>quanta</big>
 |-
-!colspan=2 style="background:#F1BC4E;"| ''Genitive''
-| <big>quant&#299;</big> || <big>quantae</big> || <big>quant&#299;</big>
-| <big>quant&#333;rum || <big>quant&#257;rum ||<big>quant&#333;rum</big>
+!style="background:#F1BC4E;"| ''Genitive''
+|style="background:#F5F5EE;"| <big>quant&#299;</big> 
+|style="background:#F5F5EE;"| <big>quantae</big> 
+|style="background:#F5F5EE;"| <big>quant&#299;</big>
+|
+|style="background:#F5F5EE;"| <big>quant&#333;rum</big>  
+|style="background:#F5F5EE;"| <big>quant&#257;rum</big>  
+
+|style="background:#F5F5EE;"| <big>quant&#333;rum</big>
 |-
-!colspan=2 style="background:#F1BC4E;"| ''Dative''
-| <big>quant&#333; || <big>quantae || <big>quant&#333;
-| <big>quant&#299;s || <big>quant&#299;s || <big>quant&#299;s
+!style="background:#F1BC4E;"| ''Dative''
+|style="background:#F5F5EE;"| <big>quant&#333; 
+|style="background:#F5F5EE;"| <big>quantae 
+|style="background:#F5F5EE;"| <big>quant&#333;
+|
+|style="background:#F5F5EE;"| <big>quant&#299;s 
+|style="background:#F5F5EE;"| <big>quant&#299;s 
+|style="background:#F5F5EE;"| <big>quant&#299;s
 |-
-!colspan=2 style="background:#F1BC4E;"| ''Accusative''
-| <big>quantum || <big>quantam || <big>quantum
-| <big>quant&#333;s || <big>quant&#257;s || <big>quanta
+!style="background:#F1BC4E;"| ''Accusative''
+|style="background:#F5F5EE;"| <big>quantum 
+|style="background:#F5F5EE;"| <big>quantam 
+|style="background:#F5F5EE;"| <big>quantum
+|
+|style="background:#F5F5EE;"| <big>quant&#333;s 
+|style="background:#F5F5EE;"| <big>quant&#257;s 
+|style="background:#F5F5EE;"| <big>quanta
 |-
-!colspan=2 style="background:#F1BC4E;"| ''Ablative''
-| <big>quant&#333; || <big>quant&#257; || <big>quant&#333;
-| <big>quant&#299;s || <big>quant&#299;s || <big>quant&#299;s
+!style="background:#F1BC4E;"| ''Ablative''
+|style="background:#F5F5EE;"| <big>quant&#333; 
+|style="background:#F5F5EE;"| <big>quant&#257; 
+|style="background:#F5F5EE;"| <big>quant&#333;
+|
+|style="background:#F5F5EE;"| <big>quant&#299;s 
+|style="background:#F5F5EE;"| <big>quant&#299;s 
+|style="background:#F5F5EE;"| <big>quant&#299;s
 |}
