--- a/wiki/diabolic.wikitext
+++ b/wiki/diabolic.wikitext
@@ -1,3 +1,22 @@
 ==English==
-==Adjective==
-'''evil,demonic '''or''' fiendish'''
+===Adjective===
+#Showing [[wickedness]] typical of a [[devil]]
+#:''"diabolic magic square"''
+#:''"a cunning and diabolic plot"''
+#Extremely evil or cruel; 
+#:''"fires lit up a diabolic scene"''
+
+====Etymology====
+First attested in [[w:1399|1399]], from [[w:Old French|Old French]] ''[[diabolique]]'', from [[w:Late Latin|Late Latin]] ''[[diabolicus]]'', from [[w:Greek|Greek]] ''diabolikos'' "devilish", from [[diabolos]] (see [[devil]]).
+
+====Synonyms====
+#[[devilish]], [[diabolical]], [[mephistophelian]], [[mephistophelean]]
+#[[demonic]], [[diabolical]], [[fiendish]], [[hellish]], [[infernal]], [[satanic]], [[unholy]]
+
+
+===Translations===
+*[[French]]: [[diabolique]]
+*[[German]]: [[diabolisch]]
+*[[Italian]]: [[diabolico]]
+*[[Russian]]: [[дьявольский]]
+*[[Spanish]]: [[diabólico]]
