--- a/wiki/abbey.wikitext
+++ b/wiki/abbey.wikitext
@@ -45,6 +45,7 @@ A male head of an abbey is an [[abbot]]; a female head is an [[abbess]].
 *[[Polish]]: [[opactwo]] ''n''
 *[[Portuguese]]: [[abadia]]
 *[[Romanica]]: [[abbatia]] ''f''
+*[[Russian]]: [[аббатство]] ''n''
 *[[Slovak]]:[[opátstvo]] ''n''
 *[[Slovene]]: [[opatija]] ''f''
 *[[Spanish]]: [[abadía]] ''f''
