--- a/wiki/abbey.wikitext
+++ b/wiki/abbey.wikitext
@@ -3,7 +3,7 @@ US English SAMPA: /{bi/
 :plural: /{biz/
 
 ==Etymology==
-From Old French '''[[abaïe]]''', '''[[abbaïe]]''', French '''[[abbaye]]''', Latin '''[[abbatia]]''', from '''[[abbas]]''' ''[[abbot]]''. See '''[[abbot]]'''.
+First attested in [[w:1250|1250]], ''[[convent]] headed by an [[abbot]]'', from Old French '''[[abaïe]]''', '''[[abbaïe]]''', French '''[[abbaye]]''', Latin '''[[abbatia]]''', from '''[[abbas]]''' ''[[abbot]]''. See '''[[abbot]]'''.
 
 ==English==
 ===Noun===
