--- a/wiki/addictive.wikitext
+++ b/wiki/addictive.wikitext
@@ -17,6 +17,6 @@
 *[[addiction]]
 
 ====Etymology====
-First attested [[w:1914|1914]]. [[Addiction]] in modern sense is first attested [[w:1906|1906]], in reference to [[opium]]. There is an isolated instance from [[w:1779|1779]], with reference to [[tobacco]].
+First attested [[w:1914|1914]]. ''Addiction'' in modern sense is first attested [[w:1906|1906]], in reference to [[opium]]. There is an isolated instance from [[w:1779|1779]], with reference to [[tobacco]].
 
 ====Translations====
