--- a/wiki/amscray.wikitext
+++ b/wiki/amscray.wikitext
@@ -1,1 +1,1 @@
-The english translation for amscray is scram ( A term used as "go away")
+Amscray is [[Pig Latin]] for scram ( A term used as "go away")
