/* Translations */ Moved from English wikipedia love article, some who understand Chinese please check <I love you#1747>

--- a/wiki/I_love_you.wikitext
+++ b/wiki/I_love_you.wikitext
@@ -84,6 +84,14 @@
 *:(Ngo oi ney)
 *Chinese ([[Mandarin]])
 *:(wǒ ài nǐ)
+*Chinese (another version)
+*:&#25105;&#24859;&#20320; (Wo3 ai4 ni3), literally means I love you.
+*:&#25105;&#23601;&#26159;&#22312;&#20046;&#20320;. (Wo3 jiu4 shi4 zai4 hu1 ni3), I do care about you. 
+Note that Chinese often finds it strange and awkward to explicitly say the phrase "I love you".
+*Chinese [[Hong Kong]]
+*:&#25105;&#37758;&#24847;&#20320;(ngo5 zung1 yi3 nei5), literally means I like you.
+*:&#25105;&#24859;&#20320; (ng oi3 nei3), I love you.
+Note that hongkongais may find it too funny to say I love you directly.
 *[[Corsican]]:
 *:[[Ti tengu cara]] (to female) 
 *:[[Ti tengu caru]] (to male) 
