--- a/wiki/negro.wikitext
+++ b/wiki/negro.wikitext
@@ -1,8 +1,6 @@
 ==English==
 ===Noun===
-'''Negro''' or '''negro''' ([[negroes]])
-
-#(Often capitalized) A person of [[African]] descent, with [[negroid]] coloring and facial characteristics.  (Note that [[black]] appears to be the currently preferred term for Negros in the US.)
+'''Negro''' plural negros,negroes#(Often capitalized) A person of [[African]] descent, with [[negroid]] coloring and facial characteristics.  (Note that [[black]] appears to be the currently preferred term for Negros in the US.)
 
 ====Derived terms====
 *[[negress]]
