--- a/wiki/abbey.wikitext
+++ b/wiki/abbey.wikitext
@@ -39,7 +39,7 @@ A male head of an abbey is an [[abbot]]; a female head is an [[abbess]].
 *[[Greek]]: [[μοναστήρι]]
 *[[Indonesian]]: [[biara]]
 *[[Interlingua]]: [[abbatia]]
-*[[Italian]]: [[abazzia]]
+*[[Italian]]: [[abbazia]]
 *[[Japanese]]: [[修道院]] ([[しゅうどういん]], shūdōin)
 *[[Norwegian]]: [[abbedi]]
 *[[Polish]]: [[opactwo]] ''n''
