--- a/wiki/unreadable.wikitext
+++ b/wiki/unreadable.wikitext
@@ -1,8 +1,8 @@
 ==English==
 ===Adjective===
-*not easily deciphered, as in ''unreadable handwriting''
-*not worth reading: ''unreadable book''
-*not interesting, boring: ''unreadable charts''
+#not easily deciphered, as in ''unreadable handwriting''
+#not worth reading: ''unreadable book''
+#not interesting, boring: ''unreadable charts''
 
 ====Examples====
 *''unreadable letters''
